--- a/InwardPolicy.Core.App/Views/Shared/_Layout.cshtml
+++ b/InwardPolicy.Core.App/Views/Shared/_Layout.cshtml
@@ -9,41 +9,110 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+    <link href="~/css/Layout.css" rel="stylesheet" />
+
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
     @*<link href="~/fonts/Oswald-VariableFont_wght.ttf" rel="stylesheet">*@
 </head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">InwardPolicy.Core.App</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
+<body style="width: 100vw; overflow-x:hidden;">
+    @*<header>
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+                <div class="container">
+                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">InwardPolicy.Core.App</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                        <ul class="navbar-nav flex-grow-1">
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
-
-    <footer class="border-top footer text-muted">
+            </nav>
+        </header>
         <div class="container">
-            &copy; 2024 - InwardPolicy.Core.App - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <main role="main" class="pb-3">
+                @RenderBody()
+            </main>
+        </div>*@
+    
+        <!-- Full height container -->
+        <div class="container-fluid fulldiv vh-100 m-0 p-0" style="overflow-y: auto; overflow-x: hidden; max-height: 100vh; ">
+            <div class="row h-100 g-0">
+                <!-- Sidebar Column -->
+                <div class="col-md-2 col-sm-2 sidebar  text-white p-3 h-100">
+                    <h1>
+                        <a href="/Dashboard.aspx" class="text-decoration-none text-reset">IPES</a>
+                    </h1>
+                    <br />
+
+                    <h4 class="text-bg-info p-2 w-auto text-start">Master </h4>
+
+                    <div style="min-height: 120px;">
+                        <ul class="nav flex-column">
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="Admin" asp-controller="UserMaster" asp-action="UserMaster">Codes Master</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/Master/ErrorCodeMaster.aspx">Error Code Master</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/Master/UserMaster.aspx">User Master</a>
+                            </li>
+
+                        </ul>
+                    </div>
+
+                    <br />
+                    <h4 class=" text-bg-info p-2 w-auto text-start">Transaction </h4>
+
+                    <div style="min-height: 120px;">
+                        <ul class="nav flex-column">
+                            <li class="nav-item">
+                                <a class="nav-link" href="/Transaction/FirePolicyListing.aspx">Fire Policy</a>
+                            </li>
+
+                        </ul>
+
+                    </div>
+                    @*<div class="rounded bg-primary p-3 mb-0" style="position: absolute; bottom: 9%; width: 15%; ">
+                            <img src="../Assets/Image/user.png" class="bg-light rounded-5" style="width:25%;" />
+                            <asp:Label runat="server" ID="lblUserName"></asp:Label>
+                        </div>*@
+                    <div class="logout" style="position: absolute; bottom: 1%; width: 100%;">
+                        @*<asp:LinkButton type="button" CausesValidation="false" runat="server" ID="Logout" OnClick="Logout_Click" CssClass="btn btn-danger">
+                                <i class="bi bi-box-arrow-left"></i> LogOut
+                            </asp:LinkButton>*@
+                        <button ID="Logout" OnClick="Logout_Click" Class="btn btn-danger">
+                            <i class="bi bi-box-arrow-left"></i> LogOut
+                        </button>
+
+                    </div>
+                </div>
+
+                @*<footer class="border-top footer text-muted">
+                    <div class="container">
+                        &copy; 2024 - InwardPolicy.Core.App - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                    </div>
+                </footer>*@
+                <!-- Main Content Column -->
+                <div class="col-md-10 p-3" style="overflow-y: auto; max-height: 97vh;">
+                    @RenderBody()
+                </div>
+
+            </div>
         </div>
-    </footer>
+    
+
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
