--- a/InwardPolicy.Core.App/Views/Login/Login.cshtml
+++ b/InwardPolicy.Core.App/Views/Login/Login.cshtml
@@ -10,69 +10,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="icon" type="image/x-icon" href="https://img.icons8.com/?size=100&id=16231&format=png&color=000000">
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     @*<link href="~/css/Login.scss" rel="stylesheet">*@
     <link href="~/css/Login.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
     <style>
         
-        .logingrid {
-            height: 100vh;
-            width: 100%;
-            align-content: center;
-        }
-
-        body {
-            font-family: 'Oswald', sans-serif;
-            background-color: #87E0E0;
-        }
-
-        .card {
-            border-radius: 10px;
-        }
-
-        .card-body {
-            padding: 2rem;
-        }
-
-        h3 {
-            font-weight: bold;
-        }
-
-        .form-label {
-            font-weight: 500;
-        }
-
-        .btn-primary {
-            background-color: #007bff;
-            border: none;
-        }
-
-            .btn-primary:hover {
-                background-color: #0056b3;
-                transition: background-color 0.3s;
-            }
-
-        #Heading {
-            margin-bottom: 10%;
-            background-color: #87E0E0;
-            padding: 20px;
-            transition: transform 0.3s;
-        }
-
-            #Heading:hover {
-                transform: scale(1.05);
-            }
+        
     </style>
 
 
 
-    <h1 id="Heading" class=" shadow  text-center mt-5 text-white">INWARD POLICY ENTRY SYSTEM</h1>
+    <center><h1 id="Heading" class=" shadow  text-center mt-5 text-white">INWARD POLICY ENTRY SYSTEM</h1></center>
     <form id="form1" method="post" asp-action="CheckLogin" >
         <div class="container d-flex justify-content-center">
             <div class="card shadow" style="width: 400px;">
