--- a/InwardPolicy.Core.App/Views/Shared/_Layout.cshtml
+++ b/InwardPolicy.Core.App/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.datatables.net/v/ju/dt-2.1.8/datatables.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="~/lib/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link href="~/css/Layout.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,6 +22,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- Chart.js -->
     <script src="https://cdn.datatables.net/v/ju/dt-2.1.8/datatables.min.js"></script> <!-- DataTables -->
     <script src="https://cdn.datatables.net/colreorder/1.6.2/js/dataTables.colReorder.min.js"></script> <!-- ColReorder for DataTables -->
+    <script src="~/lib/sweetalert2/sweetalert2.all.min.js"></script>
+    <script src="~/lib/sweetalert2/sweetalert2.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script> <!-- Custom JavaScript -->
 
 </head>
@@ -58,7 +61,7 @@
             <!-- Sidebar Column -->
             <div class="col-md-2 col-sm-2 sidebar  text-white p-3 h-100">
                 <h1>
-                    <a href="/Dashboard.aspx" class="text-decoration-none text-reset">IPES</a>
+                    <a asp-controller="Dashboard" asp-action="Dashboard" asp-area=""  class="text-decoration-none text-reset">IPES</a>
                 </h1>
                 <br />
 
@@ -67,13 +70,13 @@
                 <div style="min-height: 120px;">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="Admin" asp-controller="UserMaster" asp-action="UserMaster">Codes Master</a>
+                            <a class="nav-link" >Codes Master</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/Master/ErrorCodeMaster.aspx">Error Code Master</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/Master/UserMaster.aspx">User Master</a>
+                            <a class="nav-link" asp-area="Admin" asp-controller="UserMaster" asp-action="UserMaster">User Master</a>
                         </li>
 
                     </ul>
