--- a/InwardPolicy.Core.App/Views/Shared/_Layout.cshtml
+++ b/InwardPolicy.Core.App/Views/Shared/_Layout.cshtml
@@ -70,10 +70,10 @@
                 <div style="min-height: 120px;">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link" >Codes Master</a>
+                            <a class="nav-link" asp-area="Admin" asp-controller="CodesMaster" asp-action="CodesMaster" >Codes Master</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/Master/ErrorCodeMaster.aspx">Error Code Master</a>
+                            <a class="nav-link" >Error Code Master</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="Admin" asp-controller="UserMaster" asp-action="UserMaster">User Master</a>
